Working on a mobile view, added font-awesome

--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,1 +1,7 @@
 $border-color: dodgerblue;
+$triangle-color: dodgerblue;
+$font-color2: dodgerblue;
+$link-color: black;
+$link-visited: black;
+$link-hover: dodgerblue;
+$link-active: dodgerblue;
