--- a/scss/_content-flow.scss
+++ b/scss/_content-flow.scss
@@ -1,22 +1,52 @@
+
 .col-8 {
 	border: 1px dashed $border-color;
 }
+
 header {
 	height: 20vh;
 	border: 1px solid indianred;
+	h1 {
+		font-family: 'Amatic SC', cursive;
+		margin: 0 auto;
+
+		span {
+			color: $font-color2;
+		}
+	}
+
 }
+
 main {
 	height: 60vh;
 	border: 1px solid indianred;
+	color: rgba(0,0,0, 0.5);
+	.col-8 {
+		i {
+			display: block;
+		}
+	}
+
+	span {
+		font-family: 'Amatic SC', cursive;
+		font-size: 1.2rem;
+		font-weight: 700;
+		margin: 5px;
+	}
+
+	a {
+		@include link;
+	}
+
 }
+
 footer {
 	height: 20vh;
 	border: 1px solid indianred;
 }
 
-header h1 {
-	font-family: 'Open Sans', sans-serif;
-}
+
+
 p {
 	font-family: 'Open Sans', sans-serif;
 }
