--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,8 +1,2 @@
-$border-color: dodgerblue;
-$triangle-color: dodgerblue;
-$font-color2: dodgerblue;
-$link-color: dodgerblue;
-$link-visited: dodgerblue;
-$link-hover: dodgerblue;
-$link-active: dodgerblue;
-$border-color: dodgerblue;
+$main-color: #B2D6FF;
+$secondary-color: #F09A9D;
