--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -2,3 +2,4 @@ $main-color: #B2D6FF;
 $secondary-color: #F09A9D;
 $link-color: dodgerblue;
 $text-color: rgba(0,0,0, 0.5);
+$text-color-darker: rgba(0,0,0, 0.7);
