--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -3,3 +3,5 @@ $secondary-color: #F09A9D;
 $link-color: dodgerblue;
 $text-color: rgba(0,0,0, 0.5);
 $text-color-darker: rgba(0,0,0, 0.7);
+$background-color-sides: #F8F9EC;
+$background-color: snow;
